--- a/docs/style.css
+++ b/docs/style.css
@@ -1,89 +1,86 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: system-ui;
+body{
+	margin:0px;
+	padding:0px;
+	background-image:radial-gradient(#c7c7c7 25%, #c7c7c7 74%);
+	font-family: system-ui;
 }
-.main {
-    height: auto; 
-    width: 800px;
-    max-width: 100%; 
-    background-color: white;
-    box-shadow: 5px 7px 15px 5px #b9b6b6;
-    margin: 20px auto;
-    padding: 20px; 
-    box-sizing: border-box; 
+.clearfix{
+	clear:both;
 }
-
-.top-section {
-    background-color: #151b29;
-    text-align: center;
-    padding: 20px;
+.main{
+	height:1150px;
+	width:800px;
+	background-color:white;
+	box-shadow: 5px 7px 15px 5px #b9b6b6;
+	margin:20px auto;
 }
-
-.profile {
-    width: 150px;
-    height: 150px; 
-    border-radius: 50%;
+.top-section{
+	background-color:#151b29;
+	text-align: center;
+	padding:20px;
 }
-
-.p1 {
-    color: white;
-    font-size: 40px;
-    font-weight: bold;
-    margin: 10px 0; 
+.profile{
+	width:150px;
+	border-radius:50%;
 }
-
-.p1 span {
-    font-weight: 100;
-    color: #c7c7c7;
+.p1{
+	color:white;
+	font-size:40px;
+	font-weight:bold;
+	margin:0px;
+	margin-top:10px;
 }
-
-.p2 {
-    font-size: 20px;
-    color: #c7c7c7;
-    margin: 10px 0; 
+.p1 span{
+	font-weight:100;
+	color:#c7c7c7;
 }
-
-.col-div-4 {
-    width: 100%; 
+.p2{
+	font-size: 20px;
+	color:#c7c7c7;
+	margin:0px;
+	margin-top: 10px;
 }
-
-.col-div-8 {
-    width: 100%; 
+.col-div-4{
+	width: 35%;
+	float: left;
 }
-
-.content-box {
-    padding: 20px;
+.col-div-8{
+	width:62%;
+	float:left;
 }
-
-.head {
-    font-size: 20px;
-    text-transform: uppercase;
-    font-weight: 600;
+.line{
+	border-left: 1px solid #c7c7c7;
+	height:800px;
+	width:2%;
+	margin-top:30px;
+	float:left;
 }
-
-.p3 {
-    color: #969595;
-    margin-bottom: 5px; 
+.content-box{
+	padding: 20px;
 }
-
-.fa {
-    color: #151b29;
+.head{
+	font-size: 20px;
+	text-transform: uppercase;
+	font-weight: 600;
 }
-
-.skills {
-    padding-left: 0; 
+.p3{
+	color:#969595;
+	margin-bottom: -5px;
 }
-
-.skills li {
-    padding: 5px;
+.fa{
+	color:#151b29;
 }
-
-.skills li span {
-    color: #969595;
+.skills{
+	margin-left: -20px;
+	margin-bottom: 0px;
 }
-
-.p-4 {
-    font-size: 14px;
-    color: #969595;
+.skills li{
+	padding: 5px;
+}
+.skills li span{
+	color:#969595;
+}
+.p-4{
+	font-size:14px;
+	color:#969595;
 }
